# netip

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: bench.yml  book.yml  ci.yml
benches/: macaddr.rs  net.rs
book/ru/: book.toml
book/ru/src/: SUMMARY.md  notation.md  preface.md
book/ru/src/1-networks/: basics.md  masks.md
book/ru/src/2-structure/: 2.2-intervals.md  2.3-z-order.md  algebra.md  hypercube.md
proptest-regressions/: net.txt
proptest-regressions/net/: bicontiguous.txt
src/: fmt.rs  lib.rs  macaddr.rs  net.rs  parser.rs
src/net/: bicontiguous.rs  contiguous.rs
