[package]
name = "netip"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8" }

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true
debug-assertions = false
overflow-checks = false

[[bench]]
name = "net"
harness = false
