[package]
name = "netip"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "IPv4/IPv6 network types with non-contiguous masks support"
repository = "https://github.com/yanet-platform/netip"
documentation = "https://docs.rs/netip"
readme = "README.md"
keywords = ["ip", "network", "ipv4", "ipv6"]
categories = ["network-programming"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.8" }
proptest = "1"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true
debug-assertions = false
overflow-checks = false

[[bench]]
name = "net"
harness = false
